# frec

./: Cargo.toml  LICENSE  README.md
shell/: bash.sh  frec_editor.sh  frec_editor_fzf.sh  zsh.sh
src/: main.rs
src/algorithm/: frecency.rs  mod.rs
src/commands/: add.rs  init.rs  install.rs  mod.rs  query.rs
src/db/: mod.rs  models.rs  store.rs
